[package]
name = "hyperion-skin"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
#tracing = { workspace = true }
#valence_protocol = { workspace = true }

[lints]
workspace = true
